反馈时参数缺失

--- a/miniapp/src/pages/assessment/personal-profile/index.less
+++ b/miniapp/src/pages/assessment/personal-profile/index.less
@@ -109,6 +109,14 @@
   &:active {
     background: #eff6ff;
   }
+  &--selected {
+    background: #eff6ff;
+    border: 1rpx solid #1a56db;
+    .personal-profile-page__feedback-option-text {
+      color: #1a56db;
+      font-weight: 600;
+    }
+  }
 }
 
 .personal-profile-page__feedback-option-text {
