--- a/miniapp/src/pages/assessment/index.less
+++ b/miniapp/src/pages/assessment/index.less
@@ -139,6 +139,10 @@
   color: #666;
 }
 
+.assessment-page__progress-text--optimize {
+  color: #1A4099;
+}
+
 .assessment-page__continue-button {
   width: 100%;
   height: 64rpx;
