--- a/miniapp/src/pages/assessment/all-majors/index.less
+++ b/miniapp/src/pages/assessment/all-majors/index.less
@@ -269,11 +269,7 @@
   }
 }
 
-.all-majors-page__option--previous {
-  border-color: rgba(255, 127, 80, 0.5) !important;
-  background: rgba(255, 127, 80, 0.05) !important;
-}
-
+/* 上次选择仅用 badge 标记，不再改变选项边框/背景 */
 .all-majors-page__option-content {
   display: flex;
   align-items: flex-start;
