专业探索 整个card可点击。导出完成对话框居中。

--- a/miniapp/src/components/ExportCompleteDialog/index.less
+++ b/miniapp/src/components/ExportCompleteDialog/index.less
@@ -1,12 +1,18 @@
 // 导出完成对话框样式
 .export-complete-dialog {
+  width: 100%;
   min-width: 500rpx;
   max-width: 600rpx;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
 }
 
 .export-complete-dialog__content {
   padding: 32rpx;
   text-align: center;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .export-complete-dialog__icon {
